#cargo-features = ["lints"] # Должно быть в самом начале файла

# .cargo/config.toml


[package]
name = "wisleess2"
version = "0.1.0"
edition = "2024"

[features]
#default = ["wisdel"]
wisdel = []
questionable_algo = ["wisdel"]


[lints.rust]
unexpected_cfgs = "warn"
unsafe_code = "forbid"
missing_docs = "warn"
#rustflags = ["-Z", "unstable-options", "--check-cfg"]


[profile.release]
#rustflags = ["-Z", "unstable-options", "--check-cfg"]
opt-level = 3
overflow-checks = true

[dependencies]
mambo_map = "0.1.23"

#[features]
#hotpath = ["hotpath/hotpath"]
#hotpath-alloc = ["hotpath/hotpath-alloc"]
[lints.clippy]
unwrap_used = "deny"
